objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>CEO__c</fullName>
        <description>Name of the CEO</description>
        <inlineHelpText>Name of the CEO</inlineHelpText>
        <label>CEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Product_Family_of_Interest__c</fullName>
        <label>Competitive Product Family of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assisted Payroll</fullName>
                </value>
                <value>
                    <fullName>Checks/Supplies</fullName>
                </value>
                <value>
                    <fullName>DIY Payroll</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Intuit Care Plans</fullName>
                </value>
                <value>
                    <fullName>Intuit Care Plans for QB Prior to 2011</fullName>
                </value>
                <value>
                    <fullName>Intuit Full Service Payroll (IFSP)</fullName>
                </value>
                <value>
                    <fullName>Intuit Online Payroll (IOP)</fullName>
                </value>
                <value>
                    <fullName>Intuit Partner Platform</fullName>
                </value>
                <value>
                    <fullName>Merchant Account Services</fullName>
                </value>
                <value>
                    <fullName>Pro Advisor</fullName>
                </value>
                <value>
                    <fullName>ProTax - Lacerte</fullName>
                </value>
                <value>
                    <fullName>Pro Tax Other</fullName>
                </value>
                <value>
                    <fullName>ProTax - ProSeries</fullName>
                </value>
                <value>
                    <fullName>QB Accountants Edition</fullName>
                </value>
                <value>
                    <fullName>QB Connected Services</fullName>
                </value>
                <value>
                    <fullName>QB Enterprise Solutions (QBES)</fullName>
                </value>
                <value>
                    <fullName>QB Mac</fullName>
                </value>
                <value>
                    <fullName>QB Point-of-Sale (POS)</fullName>
                </value>
                <value>
                    <fullName>QB Pro/Premier</fullName>
                </value>
                <value>
                    <fullName>QuickBase</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Online (QBO)</fullName>
                </value>
                <value>
                    <fullName>SalesForce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Logo__c</fullName>
        <label>Competitor Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses__c</fullName>
        <description>The Competitors Key Weaknesses</description>
        <inlineHelpText>The Competitors Key Weaknesses</inlineHelpText>
        <label>Competitor Weaknesses</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <description>Number of Customers the Competitor has</description>
        <inlineHelpText>Number of Customers the Competitor has</inlineHelpText>
        <label># of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Our Product or Service Advantages Over the Competitor</description>
        <inlineHelpText>Our Product or Service Advantages Over the Competitor</inlineHelpText>
        <label>Our Advantages</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Selling_Tips__c</fullName>
        <description>Selling Tips against the Competitor</description>
        <inlineHelpText>Selling Tips against the Competitor</inlineHelpText>
        <label>Selling Tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <description>Stock Ticker Symbol</description>
        <inlineHelpText>Stock Ticker Symbol</inlineHelpText>
        <label>Ticker Symbol</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_View_Count__c</fullName>
        <label>Total View Count</label>
        <summarizedField>Competitor_View_Count__c.View_Count__c</summarizedField>
        <summaryForeignKey>Competitor_View_Count__c.Competitor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>The Year the Company was Founded</description>
        <inlineHelpText>The Year the Company was Founded</inlineHelpText>
        <label>Year Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ProConnect_Competitors</fullName>
        <columns>NAME</columns>
        <columns>Our_Advantages__c</columns>
        <columns>Competitor_Weaknesses__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Comp_Product_Family_of_Interest__c</field>
            <operation>contains</operation>
            <value>ProTax</value>
        </filters>
        <label>All ProConnect Competitors</label>
        <language>en_US</language>
    </listViews>
</CustomObject>